moved to vim like focus navigation

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -152,11 +152,10 @@ bind = $mainMod, E, exec, $terminal zsh -c "source .zshrc && $fileManager; exit"
 bind = $mainMod, B, exec, $browser
 
 bind = $mainMod, C, killactive,
-bind = $mainMod, L, exit,
 bind = $mainMod, M, exit,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, S, togglesplit, # dwindle
 bind = $mainMod, F, fullscreen, 1
 bind = $mainMod SHIFT, F, fullscreen, 0
 
@@ -167,10 +166,10 @@ bind = $mainMod ALT, W, exec, pkill waybar && waybar
 bind = $mainMod SHIFT, S, exec, grim ~/pictures/screenshots/screenshot-$(date +'%Y_%m_%d-%H_%M_%S').png
 
 # Move focus
-bind = $mainMod, left, movefocus, l
-bind = $mainMod, right, movefocus, r
-bind = $mainMod, up, movefocus, u
-bind = $mainMod, down, movefocus, d
+bind = $mainMod, H, movefocus, l
+bind = $mainMod, L, movefocus, r
+bind = $mainMod, K, movefocus, u
+bind = $mainMod, J, movefocus, d
 
 # Switch workspaces 
 bind = $mainMod, 1, workspace, 1
